Several improvements for mobile browsers: - Add the interactive-widget=resizes-content viewport meta tag to help avoid the gameport scrolling offscreen - Scroll buffer windows after metrics change so that they're still scrolled correctly - Don't measure a window's height above keyboard after every rearrange event, but only after submitting a keyboard event - Fix the mobile Firefox issue where the keyboard would flash after very turn

--- a/src/web/parchment.css
+++ b/src/web/parchment.css
@@ -22,7 +22,6 @@ body {
   left: 0px;
   margin: 0 auto;
   max-width: 900px;
-  overflow: hidden;
   position: absolute;
   right: 0px;
   top: 0px;
